--- a/UserUI/src/index.scss
+++ b/UserUI/src/index.scss
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%; /* Older browsers */
+  text-size-adjust: 100%; /* Modern browsers */
 }
 
 code {
