--- a/ManagerUI/src/component/layout/sidebar/sidebar.scss
+++ b/ManagerUI/src/component/layout/sidebar/sidebar.scss
@@ -1,36 +1,37 @@
-.sidebar{
+.sidebar {
     flex: 1;
     border-right: 0.5px solid rgb(190, 190, 190);
     min-height: 100vh;
-    .top{
+
+    .top {
         height: 50px;
         display: flex;
         align-items: center;
         justify-content: center;
-        
-        .logo{
+
+        .logo {
             font-size: 20px;
             font-weight: bold;
             color: darkblue;
         }
     }
 
-    hr{
+    hr {
         height: 0px;
         border: 0.5px solid rgb(190, 190, 190);
         margin: 0px;
         padding: 0px;
     }
 
-    .center{
+    .center {
         padding-left: 15px;
-        
-        ul{
+
+        ul {
             list-style: none;
             margin: 0px;
             padding: 0px;
 
-            .title{
+            .title {
                 font-size: 15px;
                 font-weight: bold;
                 color: rgb(141, 141, 141);
@@ -38,22 +39,26 @@
                 margin-bottom: 5px;
             }
 
-            li{
+            li {
                 display: flex;
                 align-items: center;
                 padding: 5px 5px 5px 10px;
 
-                &:hover{
+                &:hover {
                     background-color: rgb(214, 222, 255);
                     cursor: pointer;
                 }
 
-                .icon{
+                .icon {
                     font-size: 20px;
                     color: darkblue;
                 }
-                
-                span{
+
+                .non-deco {
+                    text-decoration: none;
+                }
+
+                span {
                     font-size: 20px;
                     color: rgb(44, 44, 44);
                     margin-left: 10px;
@@ -61,23 +66,23 @@
                 }
             }
 
-            
+
         }
     }
 
-    .bottom{
+    .bottom {
 
-        ul{
+        ul {
             list-style: none;
             margin: 0px;
             padding: 0px;
 
-            li{
+            li {
                 display: flex;
                 align-items: center;
                 padding: 5px 5px 5px 10px;
 
-                .colorOption{
+                .colorOption {
                     display: flex;
                     width: 30px;
                     height: 30px;
@@ -86,25 +91,26 @@
                     border-radius: 5px;
                     border: 1px solid rgb(166, 128, 255);
                     margin: 10px;
-        
-        
+
+
                     cursor: pointer;
-        
-                    &:nth-child(1){
+
+                    &:nth-child(1) {
                         display: flex;
                     }
-        
-                    &:nth-child(2){
+
+                    &:nth-child(2) {
                         display: flex;
                         background-color: black;
-                        .night{
+
+                        .night {
                             font-size: 20px;
                             color: rgb(255, 255, 255);
                         }
                     }
                 }
 
-                .image{
+                .image {
                     width: 200px;
                 }
             }
