--- a/ManagerUI/src/component/manager/Lot/style.scss
+++ b/ManagerUI/src/component/manager/Lot/style.scss
@@ -1,10 +1,10 @@
 .button {
-    background-color: lightblue;
+    background-color: rgb(201, 201, 201);
     color: rgb(0, 0, 0);
     padding: 10px 20px;
     border: none;
     cursor: pointer;
-    border-radius: 10px;
+    border-radius: 5px;
 }
 
 .button:hover {
