--- a/UserUI/src/component/home/home.scss
+++ b/UserUI/src/component/home/home.scss
@@ -1,7 +1,15 @@
-.home{
+.home {
     display: flex;
     justify-content: center;
-    p{
+
+    p {
         font-size: 20px;
+    }
+}
+
+.slide {
+    img {
+        width: 100%;
+        height: 420px;
     }
 }
