--- a/UserUI/src/component/layout/avatar/avatar.scss
+++ b/UserUI/src/component/layout/avatar/avatar.scss
@@ -1,4 +1,4 @@
-.avatar{
+.avatar {
     width: 40px;
     height: 40px;
     border-radius: 50%;
@@ -9,11 +9,15 @@
     align-items: center;
     overflow: hidden;
     border: 2px solid #7c7c7c;
-    
-    img{
+
+    img {
         width: 100%;
         height: 100%;
         object-fit: cover;
     }
-    
+
+}
+
+.avatar-icon {
+    margin-top: 22px;
 }
