--- a/UserUI/src/component/auction-session/live-auction/LiveLotDetail.scss
+++ b/UserUI/src/component/auction-session/live-auction/LiveLotDetail.scss
@@ -37,7 +37,7 @@ body {
           text-align: center;
           margin: 0 auto;
           border-radius: 10px;
-          background-color: #EEEEEE;
+          background-color: #eeeeee;
           width: 60%;
           height: 20%;
 
@@ -70,7 +70,6 @@ body {
             font-size: 20px;
           }
         }
-
       }
 
       .show-infor {
@@ -80,7 +79,7 @@ body {
         margin: 0 auto;
         border-style: solid;
         border-width: 1px;
-        background-color: #EEEEEE;
+        background-color: #eeeeee;
 
         .button-row {
           display: flex;
@@ -128,7 +127,7 @@ body {
         width: 40%;
         height: 80%;
         margin: 0 auto;
-        background-color: #EEEEEE;
+        background-color: #eeeeee;
         display: block;
         border: 1px solid black;
 
