--- a/UserUI/src/component/auction-session/upcoming-session/upcoming-session.scss
+++ b/UserUI/src/component/auction-session/upcoming-session/upcoming-session.scss
@@ -5,9 +5,23 @@
     margin: 0px;
     padding: 0px;
   }
+
   .session-cart {
-    background-color: rgb(255, 243, 243);
+    background-color: rgb(245, 245, 245);
     margin-bottom: 5rem;
     // padding: 3rem 0 3rem 0;
+    border-radius: 10px;
+  }
+
+  img {
+    padding-top: 15px;
+  }
+
+  .view-auction-detail-btn {
+    background-color: #B23842;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    letter-spacing: 1px;
   }
 }
