--- a/UserUI/src/component/auction-session/upcoming-session/upcoming-session.scss
+++ b/UserUI/src/component/auction-session/upcoming-session/upcoming-session.scss
@@ -9,5 +9,24 @@
     background-color: rgb(255, 243, 243);
     margin-bottom: 5rem;
     // padding: 3rem 0 3rem 0;
+
+    // .countdown-label {
+    //   background-color: rgb(118, 255, 180);
+    // }
+    .detail-button {
+      background-color: rgb(255, 243, 243);
+      color: rgb(0, 0, 0);
+      border: 1px solid rgb(0, 0, 0);
+      padding: 0.5rem 1rem;
+      margin: 0.5rem;
+      font-size: 1rem;
+      font-weight: 500;
+      cursor: pointer;
+      transition: 0.3s;
+      &:hover {
+        background-color: rgb(112, 112, 112);
+        color: rgb(255, 255, 255);
+      }
+    }
   }
 }
