update feature register-to-bid

--- a/UserUI/src/component/auction-session/upcoming-session-lot/upcoming-session-lot.scss
+++ b/UserUI/src/component/auction-session/upcoming-session-lot/upcoming-session-lot.scss
@@ -21,3 +21,105 @@
     border: none;
     padding: 10px 20px;
 }
+
+.register-to-bid-btn:hover {
+    background-color: #b1202c;
+    color: #ffffff;
+    border: none;
+    padding: 10px 20px;
+}
+
+.register-to-bid-yes-btn {
+    background-color: #B23842;
+    color: #ffffff;
+    border: none;
+    padding: 10px 20px;
+}
+
+.register-to-bid-yes-btn:hover {
+    background-color: #b1202c;
+    color: #ffffff;
+    border: none;
+    padding: 10px 20px;
+}
+
+.register-to-bid-no-btn {
+    background-color: #000000;
+    color: #ffffff;
+    border: none;
+    padding: 10px 20px;
+}
+
+.registered-btn {
+    background-color: #9b9b9b;
+    color: #ffffff;
+    border: none;
+    padding: 10px 20px;
+}
+
+.custom-input-group {
+    max-width: 300px;
+    /* Adjust as needed */
+    margin: auto;
+}
+
+.custom-btn {
+    background-color: #B23842;
+    color: #ffffff;
+    border: none;
+    padding: 5px 10px;
+}
+
+.custom-btn:hover {
+    background-color: #b1202c;
+    color: #ffffff;
+    border: none;
+    padding: 5px 10px;
+}
+
+//popup modal
+// body.active-modal {
+//     overflow-y: hidden;
+// }
+
+// .btn-modal {
+//     padding: 10px 20px;
+//     display: block;
+//     margin: 100px auto 0;
+//     font-size: 18px;
+// }
+
+// .modal,
+// .overlay {
+//     width: 100vw;
+//     height: 100vh;
+//     top: 0;
+//     left: 0;
+//     right: 0;
+//     bottom: 0;
+//     position: fixed;
+// }
+
+// .overlay {
+//     background: rgba(49, 49, 49, 0.8);
+// }
+
+// .modal-content {
+//     position: absolute;
+//     top: 40%;
+//     left: 50%;
+//     transform: translate(-50%, -50%);
+//     line-height: 1.4;
+//     background: #f1f1f1;
+//     padding: 14px 28px;
+//     border-radius: 3px;
+//     max-width: 600px;
+//     min-width: 300px;
+// }
+
+// .close-modal {
+//     position: absolute;
+//     top: 10px;
+//     right: 10px;
+//     padding: 5px 7px;
+// }
