--- a/UserUI/src/component/checkout/checkout.scss
+++ b/UserUI/src/component/checkout/checkout.scss
@@ -103,3 +103,10 @@
     font-size: 16px;
     margin-top: 20px;
 }
+
+.payment-btn {
+    background-color: #B23842;
+    color: #ffffff;
+    border: none;
+    padding: 10px 20px;
+}
