--- a/UserUI/src/component/checkout/checkout.scss
+++ b/UserUI/src/component/checkout/checkout.scss
@@ -12,7 +12,11 @@
     border: 1px solid #ccc;
     padding: 20px;
     background-color: #f9f9f9;
-    height: 45%;
+    height: 55%;
+
+    button {
+        letter-spacing: 2px;
+    }
 }
 
 .order-review h2,
@@ -33,8 +37,8 @@
 }
 
 .order-review img {
-    width: 100px;
-    height: auto;
+    width: 300px;
+    height: 200px;
 }
 
 .product-details {
@@ -109,4 +113,10 @@
     color: #ffffff;
     border: none;
     padding: 10px 20px;
+}
+
+.checkout-detaill-img img {
+    padding: 20px 10px;
+    width: 300px;
+    height: 200px;
 }
