--- a/UserUI/src/component/valuation_request/create/createValuation.scss
+++ b/UserUI/src/component/valuation_request/create/createValuation.scss
@@ -1,14 +1,26 @@
 .createValuation {
+  .form {
+    background-color: #f6f6f6;
+
+    .photo-box {
+      background-color: white;
+    }
+    hr {
+      margin: 0 0 1rem 0;
+      height: 0;
+      border: 0.1rem solid rgb(95, 95, 95);
+    }
+  }
   h2 {
     text-align: center;
     font-size: 20px;
     font-weight: 600;
-    margin: 0;
-    padding: 10px;
+    // margin: 0;
+    // padding: 10px;
   }
 
   .description {
-    height: 95%;
+    height: 200px;
   }
 
   .upload-title {
@@ -46,7 +58,7 @@
   }
 
   .file-formats {
-    margin-top: 10px;
+    // margin-top: 10px;
     color: #6c757d;
   }
 
