--- a/UserUI/src/component/auction-session/live-lot/LiveLotDetail.scss
+++ b/UserUI/src/component/auction-session/live-lot/LiveLotDetail.scss
@@ -1,158 +1,33 @@
-body {
-  background-color: white;
-  color: black;
-  font-family: Arial, Helvetica, sans-serif;
+.clock {
+  background-color: #EFEBE8;
+  border-radius: 10px;
+}
+
+.lot-img {
   width: 100%;
-  height: 100%;
-  top: 10%;
-  transform: translate(0, 10%);
-  margin: 0px;
+  height: 80%;
+  object-fit: cover;
+}
 
-  .content-body {
-    height: 80%;
+.bid-panel {
+  background-color: #EFEBE8;
+  padding: 20px;
 
-    .display {
-      height: 40vh;
-      width: 100%;
-      display: flex;
+  .bid-btn {
+    background-color: #B23842;
+    color: #ffffff;
+    border: none;
+    padding: 10px 20px;
+    letter-spacing: 2px;
+  }
+}
 
-      .show-image {
-        width: 50%;
-        align-content: center;
-        text-align: center;
+.bid-history {
+  background-color: #B7B7B7;
+  padding-left: 10px;
+  padding-right: 10px;
 
-        img {
-          width: 90%;
-          height: 90%;
-        }
-      }
-
-      .information {
-        display: block;
-        width: 50%;
-
-        .countdown-time {
-          display: flex;
-          justify-content: space-around;
-          text-align: center;
-          margin: 0 auto;
-          border-radius: 10px;
-          background-color: #eeeeee;
-          width: 60%;
-          height: 20%;
-
-          .time-part {
-            flex: 1;
-          }
-
-          h1 {
-            margin: auto auto;
-          }
-        }
-
-        .item-infor {
-          margin: 10px auto;
-          width: 80%;
-          height: 60%;
-
-          .item-name {
-            text-align: left;
-            width: 95%;
-            height: 20%;
-            margin: 0 auto;
-            font-size: 30px;
-          }
-
-          .item-description {
-            text-align: left;
-            width: 90%;
-            margin: 0 auto;
-            font-size: 20px;
-          }
-        }
-      }
-
-      .show-infor {
-        text-align: center;
-        width: 40%;
-        height: 80%;
-        margin: 0 auto;
-        border-style: solid;
-        border-width: 1px;
-        background-color: #eeeeee;
-
-        .button-row {
-          display: flex;
-          justify-content: space-around;
-          margin-top: 10px;
-
-          button {
-            width: 30%;
-            padding: 1% 0;
-            background-color: white;
-            border-radius: 15px;
-          }
-        }
-      }
-
-      .my-bid {
-        display: flex;
-        width: 100%;
-        height: 35%;
-        justify-content: space-around;
-
-        input {
-          text-align: center;
-          width: 100%;
-          height: 30%;
-          border-width: 1px;
-          border-style: solid;
-          margin: 4% auto 0 auto;
-          font-size: 20px;
-          border-color: red;
-          border-radius: 15px;
-          display: block;
-        }
-
-        button {
-          width: 20%;
-          height: 60%;
-          margin: auto 0;
-          background-color: white;
-          border-radius: 15px;
-        }
-      }
-
-      .show-bid {
-        width: 40%;
-        height: 80%;
-        margin: 0 auto;
-        background-color: #eeeeee;
-        display: block;
-        border: 1px solid black;
-
-        .bid-row {
-          margin: 5px auto 0 auto;
-          justify-content: space-between;
-          display: flex;
-          width: 100%;
-          height: 10%;
-          font-size: 15px;
-
-          .show-money {
-            display: inline;
-            margin-left: 5px;
-            text-align: left;
-            width: 40%;
-          }
-
-          .show-time {
-            margin-right: 5px;
-            text-align: right;
-            width: 40%;
-          }
-        }
-      }
-    }
+  span {
+    float: right;
   }
 }
