--- a/UserUI/src/component/lot/LotPreview.scss
+++ b/UserUI/src/component/lot/LotPreview.scss
@@ -5,21 +5,38 @@
     border: none;
     padding: 10px 20px;
     border-radius: 10px;
-   
+
 }
+
 .placebid:hover {
-    background-color:#7a0202;
+    background-color: #7a0202;
     padding: 10px 20px;
     transition: 0.5s;
 }
-.est{
+
+.est {
     opacity: 0.6;
 }
-.card{
-  
-     &:hover {
+
+.card {
+
+    &:hover {
         box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
         transform: translateY(-5px);
     }
-      
+
+}
+
+.a {
+    text-decoration: none;
+}
+
+.primary-btn {
+    display: block;
+    padding: 12px 20px;
+    text-align: center;
+    letter-spacing: 1px;
+    background-color: #B23842;
+    border: none;
+    color: white;
 }
