--- a/UserUI/src/component/auction-session/live-lot/LiveLotDetail.scss
+++ b/UserUI/src/component/auction-session/live-lot/LiveLotDetail.scss
@@ -20,6 +20,11 @@
     padding: 10px 20px;
     letter-spacing: 2px;
   }
+
+  .bid-input {
+    width: 100%;
+    padding: 5px 20px;
+  }
 }
 
 .bid-history {
