--- a/UserUI/src/component/valuation_request/create/createValuation.scss
+++ b/UserUI/src/component/valuation_request/create/createValuation.scss
@@ -5,12 +5,14 @@
     .photo-box {
       background-color: white;
     }
+
     hr {
       margin: 0 0 1rem 0;
       height: 0;
       border: 0.1rem solid rgb(95, 95, 95);
     }
   }
+
   h2 {
     text-align: center;
     font-size: 20px;
@@ -69,6 +71,7 @@
     padding-bottom: 3%;
     border-radius: 0%;
     font-size: larger;
+    border: none;
 
     &:hover {
       background-color: rgb(151, 33, 33);
