--- a/UserUI/src/component/auction-session/live-lot/LiveLotDetail.scss
+++ b/UserUI/src/component/auction-session/live-lot/LiveLotDetail.scss
@@ -25,6 +25,16 @@
     width: 100%;
     padding: 5px 20px;
   }
+
+  .buy-now-btn {
+    background-color: black;
+    color: #ffffff;
+    border: none;
+    padding: 10px 20px;
+    letter-spacing: 2px;
+    margin-right: 10px;
+  }
+
 }
 
 .bid-history {
