--- a/UserUI/src/component/profile/valuation-request/style.scss
+++ b/UserUI/src/component/profile/valuation-request/style.scss
@@ -259,3 +259,9 @@ input[type=checkbox] {
     font-weight: 700;
     float: right;
 }
+
+.a-link {
+    text-decoration: none;
+    color: #B23842;
+    font-size: 16px;
+}
