--- a/ManagerUI/src/layouts/sidebar/sidebar.scss
+++ b/ManagerUI/src/layouts/sidebar/sidebar.scss
@@ -16,6 +16,13 @@
     }
   }
 
+  .logo-circle {
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+  }
+
   hr {
     height: 0px;
     border: 0.5px solid rgb(190, 190, 190);
@@ -42,7 +49,7 @@
       li {
         display: flex;
         align-items: center;
-        padding: 5px 5px 5px 10px;
+        padding: 15px 5px 15px 10px;
 
         &:hover {
           background-color: rgb(214, 222, 255);
