--- a/UserUI/src/component/valuation_request/create/createValuation.scss
+++ b/UserUI/src/component/valuation_request/create/createValuation.scss
@@ -77,6 +77,10 @@
       background-color: rgb(151, 33, 33);
       color: white;
     }
+
+    .loading {
+      background-color: rgb(175, 172, 172);
+    }
   }
 
   .review {
