--- a/UserUI/src/component/lot/LotPreview.scss
+++ b/UserUI/src/component/lot/LotPreview.scss
@@ -26,6 +26,24 @@
     }
 
 }
+.sold{
+
+    color: #f10505;
+    font-size: 25px;
+    font-weight: bold;
+    text-transform: uppercase;
+    display: inline-block;
+    margin-bottom: 10px;
+
+}
+.ready{
+    color: #0F67B1;
+    font-size: 25px;
+    font-weight: bold;
+    text-transform: uppercase;
+    display: inline-block;
+    margin-bottom: 10px;
+}
 
 .a {
     text-decoration: none;
