update: create fiancial proof User UI

--- a/UserUI/src/component/FinancialProof/CreateFinancialProofRequest.scss
+++ b/UserUI/src/component/FinancialProof/CreateFinancialProofRequest.scss
@@ -12,10 +12,11 @@
   }
 }
 
+
 .card-title.policy-title {
   font-size: 1.5rem;
   font-weight: bold;
-  color: #007bff;
+  color: #ff0000;
 }
 
 .policy-text {
