update profile color ui, add register history

--- a/UserUI/src/component/profile/profile.scss
+++ b/UserUI/src/component/profile/profile.scss
@@ -59,3 +59,23 @@
 h6 {
     font-size: 1.25rem;
 }
+
+.nav-pills .nav-link.active,
+.nav-pills .show>.nav-link {
+    background-color: #B23842 !important;
+
+    span {
+        color: #fff;
+    }
+
+    svg {
+        stroke: #fff;
+    }
+}
+
+.nav-pills .nav-link,
+.nav-pills .show>.nav-link {
+    span {
+        color: #B23842;
+    }
+}
