--- a/UserUI/src/component/checkout/checkout.scss
+++ b/UserUI/src/component/checkout/checkout.scss
@@ -259,3 +259,23 @@ input[type=checkbox] {
     font-weight: 700;
     float: right;
 }
+
+.fr {
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.1);
+}
+
+.svg-container {
+    width: 200px;
+    /* Adjust the width as needed */
+    height: 200px;
+    /* Adjust the height as needed */
+}
+
+.svg-content {
+    width: 100%;
+    height: 100%;
+}
