update: UI contact us, delivery

--- a/UserUI/src/component/selling/selling.scss
+++ b/UserUI/src/component/selling/selling.scss
@@ -1,7 +1,7 @@
 .container-fluid {
   .request{
-    background-color: #ff0000; // Red color
-    border-color: #ff0000;
+    background-color: #B23842; // Red color
+    border-color: #B23842;
     color: #fff;
     font-size: 1.25rem; // Increase font size
     padding: 0.75rem 1.5rem; // Increase padding for a bigger button
@@ -9,14 +9,14 @@
     transition: background-color 0.3s ease, transform 0.3s ease; // Smooth transition for hover effect
     margin: 15px 0;
     &:hover {
-      background-color: darken(#ff0000, 10%); // Darker color on hover
-      border-color: darken(#ff0000, 10%);
+      background-color: darken(#db1425, 10%); // Darker color on hover
+      border-color: darken(#e90518, 10%);
       transform: scale(1.05); // Slightly enlarge the button on hover
     }
   
     &:focus, &:active {
-      background-color: darken(#ff0000, 20%); // Even darker color when focused or active
-      border-color: darken(#ff0000, 20%);
+      background-color: darken(#B23842, 20%); // Even darker color when focused or active
+      border-color: darken(#B23842, 20%);
       box-shadow: 0 0 0 0.2rem rgba(255, 0, 0, 0.5); // Add a shadow to indicate focus
     }
   }
@@ -100,5 +100,10 @@
 
   .text-center {
     text-align: center;
+  }
+
+  .h1 {
+   
+    color: #B23842;
   }
 }
