Update API service and call

--- a/UserUI/src/component/layout/header/header.scss
+++ b/UserUI/src/component/layout/header/header.scss
@@ -3,6 +3,11 @@
   justify-content: space-between;
   background-color: rgb(255, 253, 253);
   padding-left: 50px;
+
+  a {
+    text-decoration: none;
+    color: black;
+  }
 }
 
 .hr-line {
