update: fix lack of code when merge

--- a/UserUI/src/component/lot/LotPreview.scss
+++ b/UserUI/src/component/lot/LotPreview.scss
@@ -40,3 +40,21 @@
     border: none;
     color: white;
 }
+.sold{
+
+    color: #f10505;
+    font-size: 25px;
+    font-weight: bold;
+    text-transform: uppercase;
+    display: inline-block;
+    margin-bottom: 10px;
+
+}
+.ready{
+    color: #0F67B1;
+    font-size: 25px;
+    font-weight: bold;
+    text-transform: uppercase;
+    display: inline-block;
+    margin-bottom: 10px;
+}
