--- a/UserUI/src/component/selling/selling.scss
+++ b/UserUI/src/component/selling/selling.scss
@@ -21,13 +21,16 @@
     }
   }
   
+  .titile{
+    font-size: 50px;
+  }
   
-  
+ 
   padding: 20px;
   font-family: 'Arial, sans-serif';
 
   h1 {
-    font-size: 2.5rem;
+    font-size: 2rem;
     color: #2c3e50; // Darker shade for main headings
     margin-bottom: 20px;
   }
