Update Manager approved list

--- a/ManagerUI/src/layouts/sidebar/sidebar.scss
+++ b/ManagerUI/src/layouts/sidebar/sidebar.scss
@@ -1,5 +1,14 @@
 .sidebar {
-  width: 260px;
+  width: inherit;
+
+  @media screen and (max-width: 768px) {
+    width: 250px;
+  }
+
+  @media screen and (max-width: 1200px) {
+    width: 250px;
+  }
+
   position: fixed;
   overflow-y: auto;
 
