--- a/UserUI/src/component/profile/profile.scss
+++ b/UserUI/src/component/profile/profile.scss
@@ -1,81 +1,81 @@
 .main-body {
-    padding: 15px;
+  padding: 15px;
 }
 
 .nav-link {
-    color: #4a5568;
+  color: #4a5568;
 }
 
-.card {
-    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .1), 0 1px 2px 0 rgba(0, 0, 0, .06);
-}
+// .card {
+//   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+// }
 
-.card {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    min-width: 0;
-    word-wrap: break-word;
-    background-color: #fff;
-    background-clip: border-box;
-    border: 0 solid rgba(0, 0, 0, .125);
-    border-radius: .25rem;
-}
+// .card {
+//   position: relative;
+//   display: flex;
+//   flex-direction: column;
+//   min-width: 0;
+//   word-wrap: break-word;
+//   background-color: #fff;
+//   background-clip: border-box;
+//   border: 0 solid rgba(0, 0, 0, 0.125);
+//   border-radius: 0.25rem;
+// }
 
 .card-body {
-    flex: 1 1 auto;
-    min-height: 1px;
-    padding: 1rem;
+  flex: 1 1 auto;
+  min-height: 1px;
+  padding: 1rem;
 }
 
 .gutters-sm {
-    margin-right: -8px;
-    margin-left: -8px;
+  margin-right: -8px;
+  margin-left: -8px;
 }
 
-.gutters-sm>.col,
-.gutters-sm>[class*=col-] {
-    padding-right: 8px;
-    padding-left: 8px;
+.gutters-sm > .col,
+.gutters-sm > [class*="col-"] {
+  padding-right: 8px;
+  padding-left: 8px;
 }
 
 .mb-3,
 .my-3 {
-    margin-bottom: 1rem !important;
+  margin-bottom: 1rem !important;
 }
 
 .bg-gray-300 {
-    background-color: #e2e8f0;
+  background-color: #e2e8f0;
 }
 
 .h-100 {
-    height: 100% !important;
+  height: 100% !important;
 }
 
 .shadow-none {
-    box-shadow: none !important;
+  box-shadow: none !important;
 }
 
 h6 {
-    font-size: 1.25rem;
+  font-size: 1.25rem;
 }
 
 .nav-pills .nav-link.active,
-.nav-pills .show>.nav-link {
-    background-color: #B23842 !important;
+.nav-pills .show > .nav-link {
+  background-color: #b23842 !important;
 
-    span {
-        color: #fff;
-    }
+  span {
+    color: #fff;
+  }
 
-    svg {
-        stroke: #fff;
-    }
+  svg {
+    stroke: #fff;
+  }
 }
 
 .nav-pills .nav-link,
-.nav-pills .show>.nav-link {
-    span {
-        color: #B23842;
-    }
+.nav-pills .show > .nav-link {
+  span {
+    color: #b23842;
+  }
 }
