--- a/ManagerUI/src/layouts/header/header.scss
+++ b/ManagerUI/src/layouts/header/header.scss
@@ -12,4 +12,16 @@
       color: white;
     }
   }
+
+  .user-info {
+    display: flex;
+    align-items: center;
+    color: white;
+    font-weight: 500;
+    margin-right: 1rem;
+
+    .welcome {
+      color: white;
+    }
+  }
 }
