fix upcoming pre bid

--- a/ManagerUI/src/component/lots/style.scss
+++ b/ManagerUI/src/component/lots/style.scss
@@ -25,3 +25,10 @@ img {
     color: white;
     transition: 0.3s;
 }
+
+.text {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    width: 100%;
+}
