--- a/UserUI/src/component/layout/header/header.scss
+++ b/UserUI/src/component/layout/header/header.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   background-color: rgb(255, 253, 253);
-  padding-left: 50px;
+  // padding-left: 50px;
 
   a {
     text-decoration: none;
