--- a/UserUI/src/views/image/image.scss
+++ b/UserUI/src/views/image/image.scss
@@ -48,7 +48,7 @@
 .small-images {
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   border: 1px solid #f5f5f5;
   padding: 1rem;
   margin-top: 1rem;
