--- a/UserUI/src/component/profile/FinancialProof/ViewFinancialProof.scss
+++ b/UserUI/src/component/profile/FinancialProof/ViewFinancialProof.scss
@@ -34,4 +34,30 @@
       border-color: #1e7e34;
     }
   }
+
+  .financial-proof-amount {
+    font-weight: bold;
+    color: #dc3545; // Red color to make it stand out
+    font-size: 1.2rem;
+  }
+
+  .financial-proof-amount-hidden {
+    font-weight: bold;
+    color: #6c757d; // Grey color for hidden amount
+    font-size: 1.2rem;
+  }
+
+  .amount-toggle-btn {
+    font-size: 0.875rem;
+    color: #007bff;
+    cursor: pointer;
+    text-decoration: underline;
+  }
+  .stt{
+    color: #555;
+  }
+  .text-success{
+    font-weight: bold;
+    color: #0afe06;
+  }
 }
