--- a/UserUI/src/component/notification/notify.scss
+++ b/UserUI/src/component/notification/notify.scss
@@ -1,10 +1,12 @@
-.detail-button {
-  background-color: #d36554;
-  text-decoration: none;
-  border: none;
-  color: #ffffff;
+.action {
+  .detail-button {
+    background-color: #d36554;
+    text-decoration: none;
+    border: none;
+    color: #ffffff;
 
-  &:hover {
-    background-color: #b23842;
+    &:hover {
+      background-color: #b23842;
+    }
   }
 }
